--- a/project/public/css/menu.css
+++ b/project/public/css/menu.css
@@ -1,7 +1,8 @@
 /* banner */
 
 .banner {
-  background: url(../images/menu-bg-1.jpeg) no-repeat center;
+  height: 400px;
+  background: url(../images/home-1-slider.jpg) no-repeat bottom;
   background-size: cover;
 }
 
@@ -9,10 +10,10 @@
 
 .menu-main {
   padding: 60px 0;
+  background-color: var(--pri-01-color);
 }
 
 .menu-main .h2-heading {
-  margin-bottom: 32px;
 }
 
 /* filter */
@@ -22,11 +23,13 @@
 }
 
 .filter .title {
-  font-size: 1rem;
-  font-weight: 700;
-  background-color: var(--pri-3-color);
+  font-size: 16px;
+  font-weight: 600;
+  background-color: var(--pri-5-color);
   color: #fff;
-  padding: 10px 16px;
+
+  text-transform: uppercase;
+  padding: 10px 12px;
   letter-spacing: 0px;
 }
 
@@ -37,18 +40,18 @@
 
 .filter-content {
   padding: 10px 12px;
-  background-color: var(--pri-1-color);
+  background-color: #fff;
 }
 
 .filter-item {
   padding: 2px 0;
-  color: var(--pri-3-color);
+  color: var(--primary-color);
 }
 
 .filter-item.active .filter-icon,
 .filter-item.active .filter-name {
-  color: var(--pri-4-color);
-  font-weight: 700;
+  color: var(--pri-5-color);
+  font-weight: 600;
 }
 
 .filter-icon i {
@@ -58,20 +61,21 @@
 }
 
 .filter-name {
-  font-size: 1.125rem;
+  font-size: 16px;
   font-weight: 500;
 }
 
 .filter-content-2 {
   padding: 10px 16px;
-  background-color: var(--pri-1-color);
+  background-color: #fff;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
 .filter-content-2 .item {
+  font-size: 16px;
   margin: 8px 0;
-  color: var(--pri-3-color);
+  color: var(--primary-color);
   font-weight: 500;
 }
 
@@ -84,14 +88,36 @@
   outline: none;
   padding: 4px 8px;
   border-radius: 2px;
+
+  background-color: #fff;
+  border: 1px solid var(--pri-5-color);
   max-width: 100%;
+}
+
+.filter-bestseller {
+  padding: 16px;
+  background: #fff;
+}
+
+.filter-bestseller .item {
+  margin: 16px 0;
+}
+
+.filter-bestseller .item img {
+  width: 68px;
+  height: 68px;
+  box-shadow: 0 2px 8px 0px rgb(0 0 0 / 25%);
+}
+
+.filter-item-info {
+  margin-left: 12px;
 }
 
 /* card */
 
 .item-quantity-bar {
   padding: 12px;
-  background-color: var(--pri-1-color);
+  background-color: #fff;
   text-align: center;
   font-size: 1.125rem;
 
