--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -100,7 +100,7 @@ a {
 }
 
 .nav-item.show .sub-nav {
-  transform: scaleY(1);
+  display: block;
 }
 
 /* pagination */
@@ -172,9 +172,13 @@ header.scroll-top .nav-item.active > a {
 }
 
 header .bars-icon i {
-  color: var(--pri-2-color);
+  color: #fff;
   font-size: 30px;
   display: none;
+}
+
+header .bars-icon i:hover {
+  color: var(--pri-2-color);
 }
 
 header .logo {
@@ -200,18 +204,16 @@ header .nav-list {
   list-style: none;
   margin: 0;
   flex-basis: 100%;
-
-  height: 100%;
   justify-content: center;
 }
 
 .nav-list.show {
   transform: scaleY(1);
+  opacity: 1;
 }
 
 header .nav-item {
   position: relative;
-  height: 100%;
 }
 
 .drop-item {
@@ -456,9 +458,8 @@ header .sub-nav {
   top: 100%;
   left: 0;
 
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: linear 0.35s;
+  display: none;
+  overflow: hidden;
   box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -533,6 +534,10 @@ header .sub-nav a:hover {
 
   display: none;
   text-shadow: 1px 2px rgba(0, 0, 0, 0.25);
+}
+
+.a.btn.banner-btn.go-to-top {
+  text-shadow: none;
 }
 
 .owl-item.active .banner-item .content {
@@ -1228,6 +1233,18 @@ footer .copy-right {
   }
 
   100% {
+    opacity: 1;
+  }
+}
+
+@keyframes showSubnav {
+  0% {
+    height: 0;
+    opacity: 0;
+  }
+
+  100% {
+    height: max-content;
     opacity: 1;
   }
 }
