--- a/project/public/css/about.css
+++ b/project/public/css/about.css
@@ -4,10 +4,14 @@
   height: 400px;
 }
 
+.main {
+  background: var(--pri-01-color);
+}
+
 .box {
   width: 100%;
   padding: 16px;
-  height: 360px;
+  height: 330px;
   border-radius: 8px;
 }
 
@@ -15,6 +19,8 @@
   width: 100%;
   height: 100%;
   border-radius: 8px;
+  object-fit: cover;
+
   box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.3);
 }
 
@@ -29,16 +35,16 @@
 }
 
 .box-content h3 {
-  font-weight: 700;
+  font-weight: 600;
   text-transform: capitalize;
   font-size: 2rem;
 }
 
 .sub-title {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 1.125rem;
 }
 
 .box-content .pharagraph {
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
