--- a/project/public/css/cart.css
+++ b/project/public/css/cart.css
@@ -26,7 +26,7 @@
 }
 
 .product-image {
-  width: 68px;
+  width: 60px;
   height: 68px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
@@ -38,6 +38,7 @@
 
 .product-text {
   margin-left: 16px;
+  min-width: 130px;
 }
 
 .product-title {
@@ -76,6 +77,7 @@
   font-weight: 500;
   color: var(--pri-4-color);
   font-size: 16px;
+  min-width: 98px;
 }
 
 /* calculator */
@@ -122,11 +124,18 @@ input.code {
   color: var(--pri-3-color);
 }
 
-.profile-item input {
+.profile-item input[type="text"] {
   border: none;
   font-weight: 500;
   font-size: 16px;
   min-width: 300px;
 
   outline: none;
+  border-bottom: 1px solid var(--pri-4-color);
+  background-color: var(--pri-1-color);
+}
+
+.profile-item .option {
+  font-size: 16px;
+  color: var(--primary-color);
 }
