--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -106,7 +106,7 @@ html {
 .btn:hover {
   color: #fff;
   outline: none;
-  border-color: #fff;
+  border-color: var(--pri-4-color);
   background-color: var(--pri-4-color);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
@@ -548,6 +548,8 @@ header .nav-item i {
   width: 140px;
   overflow: hidden;
   text-overflow: ellipsis;
+
+  text-transform: capitalize;
   font-weight: 600;
   color: var(--pri-4-color);
 }
@@ -744,6 +746,7 @@ header .sub-nav a:hover {
   transition: ease-out 0.5s;
 
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  overflow: hidden;
 }
 
 .intro-item:hover {
@@ -783,6 +786,10 @@ header .sub-nav a:hover {
   color: #fff;
 }
 
+.intro-item .item-content a:hover {
+  text-decoration: underline;
+}
+
 .intro-boder {
   width: 36px;
   height: 4px;
@@ -803,7 +810,7 @@ header .sub-nav a:hover {
 }
 
 .intro-item.item-3 {
-  background: url(../images/banner-2.jpg) no-repeat right;
+  background: url(../images/sp-16-freeze-vietquat.jpg) no-repeat right;
   background-size: cover;
   border-radius: 16px;
 }
