--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
 
   --pri-1-color: #f9e0ae;
@@ -109,6 +109,25 @@ html {
   border-color: var(--pri-4-color);
   background-color: var(--pri-4-color);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+/* go to top */
+
+.gotop {
+  position: fixed;
+  visibility: hidden;
+
+  right: 32px;
+  bottom: 60px;
+  width: 42px;
+  height: 42px;
+
+  color: #fff;
+  background-color: var(--pri-4-color);
+  border-radius: 50%;
+  font-size: 20px;
+
+  cursor: pointer;
 }
 
 /* popup */
