--- a/project/public/css/tintuc.css
+++ b/project/public/css/tintuc.css
@@ -31,6 +31,7 @@
 .side-news-item .image img {
   width: 60px;
   height: 60px;
+  object-fit: cover;
 }
 
 .side-news-item .info {
@@ -68,6 +69,7 @@
 .main-content-item .image img {
   height: 100%;
   width: 250px;
+  object-fit: cover;
 }
 
 .main-content .info {
