--- a/project/public/css/cart.css
+++ b/project/public/css/cart.css
@@ -106,7 +106,6 @@ input.code {
 
 .price-box {
   width: 200px;
-  margin: 0 auto;
   font-size: 16px;
   color: var(--pri-3-color);
 }
@@ -143,4 +142,10 @@ input.code {
 .profile-item .option {
   font-size: 16px;
   color: var(--primary-color);
+}
+
+.error-ms {
+  color: red;
+  font-size: 14px;
+  margin-top: 16px;
 }
