--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -141,7 +141,7 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fff;
+  background-color: #eee;
 
   padding: 24px;
   border-radius: 8px;
