--- a/project/public/css/tintuc.css
+++ b/project/public/css/tintuc.css
@@ -43,6 +43,7 @@
 .side-news-item .info-name {
   font-weight: 500;
   font-family: "Roboto", sans-serif;
+  font-size: 12px;
 }
 
 .side-news-item .info-date {
